[package]
name = "audio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-rc.3" }
rocket_ws = { git = "https://github.com/SergioBenitez/Rocket", version = "0.1.0-rc.3" }
