[package]
name = "audio_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
cpal = "0.15.2"
anyhow = "1.0"
ringbuf = "0.3.3"
prost = "0.12.0"
bytes = "1.4.0"
clap = { version = "4.4.2", features = ["derive"] }
eio = "0.1.2"

[build-dependencies]
prost-build = "0.12.0"

[toolchain]
channel = "nightly"

[[bin]]
name = "client"
path = "src/demo_client.rs"

[[bin]]
name = "server"
path = "src/main.rs"